[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/img/tileset.png" type="Texture" id=1]
[ext_resource path="res://source/scenes/ColorMix.gd" type="Script" id=2]
[ext_resource path="res://source/machines/Options.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/img/wall.png" type="Texture" id=4]
[ext_resource path="res://assets/sound/c2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/c3.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/c4.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sound/error.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=9]
[ext_resource path="res://assets/title_theme_p.tres" type="Theme" id=10]
[ext_resource path="res://assets/error_theme_p.tres" type="Theme" id=11]

[sub_resource type="TileSet" id=1]
0/name = "floor"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "mixer"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "splitter"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "cinput"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 32, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "coutput"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 32, 32, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "corner"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "wall"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "bg"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[node name="ColorMix" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65537, 3, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 196609, 3, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 4, 0, 327681, 3, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 458753, 3, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0 )

[node name="WallBG" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 1610612738, 0, 1, 1610612738, 0, 2, 1610612738, 0, 3, 1610612738, 0, 4, 1610612738, 0, 5, 1610612738, 0, 6, 1610612738, 0, 7, 1610612738, 0, 8, 1610612738, 0, 9, 1610612738, 0, 10, 1610612738, 0, 11, 1610612738, 0, 12, 1610612738, 0, 13, 1610612738, 0, 14, 1610612738, 0, 65536, 1610612738, 0, 65537, 0, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, -1610612736, 0, 65547, 1610612738, 0, 65548, 1610612738, 0, 65549, 1610612738, 0, 65550, 1610612738, 0, 131072, 1610612738, 0, 131073, -1073741823, 0, 131082, -1610612735, 0, 131083, 1610612738, 0, 131084, 1610612738, 0, 131085, 1610612738, 0, 131086, 1610612738, 0, 196608, 1610612738, 0, 196609, -1073741823, 0, 196618, -1610612735, 0, 196619, 1610612738, 0, 196620, 1610612738, 0, 196621, 1610612738, 0, 196622, 1610612738, 0, 262144, 1610612738, 0, 262145, -1073741823, 0, 262154, -1610612735, 0, 262155, 1610612738, 0, 262156, 1610612738, 0, 262157, 1610612738, 0, 262158, 1610612738, 0, 327680, 1610612738, 0, 327681, -1073741823, 0, 327690, -1610612735, 0, 327691, 1610612738, 0, 327692, 1610612738, 0, 327693, 1610612738, 0, 327694, 1610612738, 0, 393216, 1610612738, 0, 393217, -1073741823, 0, 393226, -1610612735, 0, 393227, 1610612738, 0, 393228, 1610612738, 0, 393229, 1610612738, 0, 393230, 1610612738, 0, 458752, 1610612738, 0, 458753, -1073741824, 0, 458754, 1610612737, 0, 458755, 1610612737, 0, 458756, 1610612737, 0, 458757, 1610612737, 0, 458758, 1610612737, 0, 458759, 1610612737, 0, 458760, 1610612737, 0, 458761, 1610612737, 0, 458762, 1610612736, 0, 458763, 1610612738, 0, 458764, 1610612738, 0, 458765, 1610612738, 0, 458766, 1610612738, 0, 524288, 1610612738, 0, 524289, 1610612738, 0, 524290, 1610612738, 0, 524291, 1610612738, 0, 524292, 1610612738, 0, 524293, 1610612738, 0, 524294, 1610612738, 0, 524295, 1610612738, 0, 524296, 1610612738, 0, 524297, 1610612738, 0, 524298, 1610612738, 0, 524299, 1610612738, 0, 524300, 1610612738, 0, 524301, 1610612738, 0, 524302, 1610612738, 0, 589824, 1610612738, 0, 589825, 1610612738, 0, 589826, 1610612738, 0, 589827, 1610612738, 0, 589828, 1610612738, 0, 589829, 1610612738, 0, 589830, 1610612738, 0, 589831, 1610612738, 0, 589832, 1610612738, 0, 589833, 1610612738, 0, 589834, 1610612738, 0, 589835, 1610612738, 0, 589836, 1610612738, 0, 589837, 1610612738, 0, 589838, 1610612738, 0 )

[node name="Options0" parent="." instance=ExtResource( 3 )]
position = Vector2( 416, 64 )

[node name="Options1" parent="." instance=ExtResource( 3 )]
position = Vector2( 416, 144 )
option = 1

[node name="Options2" parent="." instance=ExtResource( 3 )]
position = Vector2( 416, 224 )
option = 2

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 9 )

[node name="Level" type="Label" parent="HUD/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 5.0
margin_right = 100.0
margin_bottom = 31.0
theme = ExtResource( 10 )
text = "First Color"
align = 1

[node name="ErrorDisplay" type="Label" parent="HUD/Control"]
visible = false
anchor_right = 1.0
margin_top = 32.0
margin_bottom = 46.0
theme = ExtResource( 11 )
align = 1

[node name="HBox" type="HBoxContainer" parent="HUD/Control"]
visible = false
margin_right = 144.0
margin_bottom = 86.0

[node name="VBoxInput" type="VBoxContainer" parent="HUD/Control/HBox"]
margin_right = 70.0
margin_bottom = 86.0
rect_min_size = Vector2( 70, 0 )
custom_constants/separation = 10

[node name="Input1" type="Button" parent="HUD/Control/HBox/VBoxInput"]
margin_right = 70.0
margin_bottom = 22.0
text = "Input 01"

[node name="Input2" type="Button" parent="HUD/Control/HBox/VBoxInput"]
margin_top = 32.0
margin_right = 70.0
margin_bottom = 54.0
text = "Input 02"

[node name="VBoxOutput" type="VBoxContainer" parent="HUD/Control/HBox"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 86.0
rect_min_size = Vector2( 70, 0 )
custom_constants/separation = 10

[node name="Output1" type="Button" parent="HUD/Control/HBox/VBoxOutput"]
margin_right = 70.0
margin_bottom = 22.0
text = "Output 01"

[node name="Output2" type="Button" parent="HUD/Control/HBox/VBoxOutput"]
margin_top = 32.0
margin_right = 70.0
margin_bottom = 54.0
text = "Output 02"

[node name="Output3" type="Button" parent="HUD/Control/HBox/VBoxOutput"]
margin_top = 64.0
margin_right = 70.0
margin_bottom = 86.0
text = "Output 03"

[node name="HBoxButtons" type="HBoxContainer" parent="HUD/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -175.0
margin_top = -50.0
margin_right = 175.0
margin_bottom = -10.0
custom_constants/separation = 20

[node name="BackToMenu" type="Button" parent="HUD/Control/HBoxButtons"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
text = "Back to Menu"

[node name="Reset" type="Button" parent="HUD/Control/HBoxButtons"]
margin_left = 120.0
margin_right = 220.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
text = "Reset Level"

[node name="Save" type="Button" parent="HUD/Control/HBoxButtons"]
margin_left = 240.0
margin_right = 340.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
text = "Save Color"

[node name="ErrorTimer" type="Timer" parent="HUD/Control"]
wait_time = 3.0
one_shot = true

[node name="AudioSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="AudioPlace" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="AudioButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="AudioError" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[connection signal="button_down" from="HUD/Control/HBox/VBoxInput/Input1" to="." method="_on_Input1_button_down"]
[connection signal="button_down" from="HUD/Control/HBox/VBoxInput/Input2" to="." method="_on_Input2_button_down"]
[connection signal="button_down" from="HUD/Control/HBox/VBoxOutput/Output1" to="." method="_on_Output1_button_down"]
[connection signal="button_down" from="HUD/Control/HBox/VBoxOutput/Output2" to="." method="_on_Output2_button_down"]
[connection signal="button_down" from="HUD/Control/HBox/VBoxOutput/Output3" to="." method="_on_Output3_button_down"]
[connection signal="button_down" from="HUD/Control/HBoxButtons/BackToMenu" to="." method="_on_BackToMenu_button_down"]
[connection signal="button_down" from="HUD/Control/HBoxButtons/Reset" to="." method="_on_Reset_button_down"]
[connection signal="button_down" from="HUD/Control/HBoxButtons/Save" to="." method="_on_Save_button_down"]
[connection signal="timeout" from="HUD/Control/ErrorTimer" to="." method="_on_ErrorTimer_timeout"]
